# Marketplace

./: .dockerignore  .gitignore  Dockerfile  SMS-SETUP.md  TAURI_SETUP.md  fly.toml  package-lock.json  package.json  scrape.js  server.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
